@@ -1,5 +1,12 @@
 2014-07-22  Filip Pizlo  <fpizlo@apple.com>
 
+        Fix Windows.
+
+        * jsc.cpp:
+        (WTF::jscExit):
+
+2014-07-22  Filip Pizlo  <fpizlo@apple.com>
+
         Fix 32-bit.
 
         * dfg/DFGSpeculativeJIT32_64.cpp:
